inputfield spacing issue

--- a/src/components/Products/dropdown.css
+++ b/src/components/Products/dropdown.css
@@ -1,3 +1,4 @@
 .dropdown-category{
-width: 46%;
+width: 48%;
+padding: 5px;
 }
